fixing center alignement problems and renaming private functions

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ form {
 .pagination {
     display: flex;
     flex-direction: column;
-
+    align-items: center;
     .pagination-btns {
         display: flex;
         align-items: center;
